fix: cursor wasnt changing when hovering on small input dot

--- a/client/src/components/dashboard/lc_creator/creator_inputs/creator_inputs.css
+++ b/client/src/components/dashboard/lc_creator/creator_inputs/creator_inputs.css
@@ -24,6 +24,7 @@
   left: 25px;
 
   background-color:#fff;
+  z-index: 9;
 }
 .small_dot:hover{
   cursor: pointer;
